# open-deck

./: .gitignore  README.md
Code/: README.md
Code/Python/: LICENSE  README.md  build-mac-app.sh  clean.sh  full_GUI.py  keyrecord.py  pyproject.toml  setup-macos.sh
Code/Python/src/opendeckmanager/: __main__.py  config.py  gui.py  issue-different-thread.py  issue.py  key_recorder.py
